submit-queue/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: @@-submit-queue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: submit-queue
        target-repo: @@
    spec:
      containers:
      - name: submit-queue
        command:
        - /mungegithub
        - --dry-run=true
        - --http-cache-dir=$(HTTP_CACHE_DIR)
        - --organization=$(ORGANIZATION)
        - --project=$(PROJECT)
        - --pr-mungers=$(PR_MUNGERS)
        - --state=$(STATE)
        - --token-file=$(TOKEN_FILE)
        - --required-retest-contexts=$(REQUIRED_RETEST_CONTEXTS)
        - --required-contexts=$(REQUIRED_CONTEXTS)
        - --nonblocking-jenkins-jobs=$(NONBLOCKING_JENKINS_JOBS)
        - --jenkins-jobs=$(JENKINS_JOBS)
        - --presubmit-jobs=$(PRESUBMIT_JOBS)
        - --weak-stable-jobs=$(WEAK_STABLE_JOBS)
        - --do-not-merge-milestones=$(DO_NOT_MERGE_MILESTONES)
        - --admin-port=$(ADMIN_PORT)
        - --gcs-bucket=$(GCS_BUCKET)
        - --gcs-logs-dir=$(GCS_LOGS_DIR)
        - --pull-logs-dir=$(PULL_LOGS_DIR)
        - --pull-key=$(PULL_KEY)
        - --path-label-config=$(PATH_LABEL_CONFIG)
        - --block-path-config=$(BLOCK_PATH_CONFIG)
        - --repo-dir=$(REPO_DIR)
        - --test-owners-csv=$(TEST_OWNERS_CSV)
        - --number-of-old-test-results=$(NUMBER_OF_OLD_TEST_RESULTS)
        - --fixes-issue-reassign=$(FIXES_ISSUE_REASSIGN)
        - --blunderbuss-reassign=$(BLUNDERBUSS_REASSIGN)
        - --generated-files-config=$(GENERATED_FILES_CONFIG)
        - --chart-url=$(CHART_URL)
        - --history-url=$(HISTORY_URL)
        - --enable-md-yaml=$(ENABLE_MD_YAML)
        - --label-file=$(LABEL_FILE)
        - --triager-url=$(TRIAGER_URL)
        image: gcr.io/google_containers/submit-queue:2016-05-24-86f86cd
        ports:
        - name: status
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
        volumeMounts:
        - mountPath: /etc/secret-volume
          name: secret-volume
        - mountPath: /gitrepos
          name: repo
        - mountPath: /cache
          name: cache-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: @@-github-token
      - name: repo
        emptyDir: {}
      - name: cache-volume
        persistentVolumeClaim:
          claimName: @@-cache
